# haskell-sheets

./: LICENSE  README.md  haskell-sheets.cabal
src/Data/: Sheets.hs
src/Data/Sheets/: Core.hs  Idx.hs  Series.hs  Sheet.hs  Testing.hs  Utils.hs
