name:                   haskell-sheets
version:                0.1.0.0
synopsis:               My attempt at replicating some of pandas' awesome functionality in Haskell as a learning exercise.
homepage:               https://github.com/bheklilr/haskell-sheets
license:                MIT
license-file:           LICENSE
author:                 Aaron Stevens
maintainer:             bheklilr2@gmail.com
copyright:              Aaron Stevens 2016
category:               Data
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

library
    exposed-modules:    Data.Sheets
                      , Data.Sheets.Utils
                      , Data.Sheets.Sheet
                      , Data.Sheets.Series
                      , Data.Sheets.Idx
                      , Data.Sheets.Core
    build-depends:      base >=4.8 && <4.9
                      , vector
                      , text
                      , HList
    hs-source-dirs:     src
    default-language:   Haskell2010
